Fixed accessibility for contact links

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
           ></svg>
           <div class="mt-4 w-full flex justify-evenly items-center">
             <a
-              class="text-gray-300 hover:text-gray-400 transition-transform duration-150 transform hover:scale-110"
+              class="text-gray-300 hover:text-gray-400 focus:text-gray-400 transition-transform duration-150 transform hover:scale-110 focus:scale-110"
               href="mailto:georgeletsos391@gmail.com"
               target="_blank"
             >
@@ -23,9 +23,10 @@
                 data-svgid="mail"
                 class="w-9 h-9 md:w-12 md:h-12 fill-current"
               ></svg>
+              <span class="sr-only">Mail</span>
             </a>
             <a
-              class="text-gray-300 hover:text-gray-400 transition-transform duration-150 transform hover:scale-110"
+              class="text-gray-300 hover:text-gray-400 focus:text-gray-400 transition-transform duration-150 transform hover:scale-110 focus:scale-110"
               href="https://www.linkedin.com/in/george-letsos"
               target="_blank"
             >
@@ -33,9 +34,10 @@
                 data-svgid="linkedin"
                 class="w-9 h-9 md:w-12 md:h-12 fill-current"
               ></svg>
+              <span class="sr-only">LinkedIn</span>
             </a>
             <a
-              class="text-gray-300 hover:text-gray-400 transition-transform duration-150 transform hover:scale-110"
+              class="text-gray-300 hover:text-gray-400 focus:text-gray-400 transition-transform duration-150 transform hover:scale-110 focus:scale-110"
               href="https://github.com/georgeletsos"
               target="_blank"
             >
@@ -43,6 +45,7 @@
                 data-svgid="github"
                 class="w-9 h-9 md:w-12 md:h-12 fill-current"
               ></svg>
+              <span class="sr-only">Github</span>
             </a>
           </div>
         </section>
