Added rel="noopener noreferrer" to links to cross-origin destinations

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
               class="text-gray-300 hover:text-gray-400 focus:text-gray-400 transition-transform duration-150 transform hover:scale-110 focus:scale-110"
               href="mailto:georgeletsos391@gmail.com"
               target="_blank"
+              rel="noopener noreferrer"
             >
               <svg
                 data-svgid="mail"
@@ -29,6 +30,7 @@
               class="text-gray-300 hover:text-gray-400 focus:text-gray-400 transition-transform duration-150 transform hover:scale-110 focus:scale-110"
               href="https://www.linkedin.com/in/george-letsos"
               target="_blank"
+              rel="noopener noreferrer"
             >
               <svg
                 data-svgid="linkedin"
@@ -40,6 +42,7 @@
               class="text-gray-300 hover:text-gray-400 focus:text-gray-400 transition-transform duration-150 transform hover:scale-110 focus:scale-110"
               href="https://github.com/georgeletsos"
               target="_blank"
+              rel="noopener noreferrer"
             >
               <svg
                 data-svgid="github"
@@ -73,6 +76,7 @@
               class="py-2 px-4 bg-red-500 hover:bg-red-400 focus:bg-red-500 text-gray-900 font-bold rounded inline-flex items-center tracking-tight focus:outline-none focus:shadow-red-outline"
               href="https://docs.google.com/document/d/1Svh81bwzSSocR16i678C775_1NNA0a8vikjDUOHq6WY/edit"
               target="_blank"
+              rel="noopener noreferrer"
             >
               <svg data-svgid="download" class="w-6 h-6 fill-current"></svg>
               <span class="ml-2">DOWNLOAD RESUME</span>
@@ -107,6 +111,7 @@
                     class="text-gray-300 flex items-center hover:underline focus:underline"
                     href="https://lightning-ygo.herokuapp.com"
                     target="_blank"
+                    rel="noopener noreferrer"
                   >
                     See Project
                     <svg
@@ -118,6 +123,7 @@
                     class="ml-4 text-gray-300 flex items-center hover:underline focus:underline"
                     href="https://github.com/georgeletsos/lightning-ygo"
                     target="_blank"
+                    rel="noopener noreferrer"
                   >
                     GitHub Repo
                     <svg
@@ -150,6 +156,7 @@
                     class="text-gray-300 flex items-center hover:underline focus:underline"
                     href="https://github.com/georgeletsos/lightning-ygo-api"
                     target="_blank"
+                    rel="noopener noreferrer"
                   >
                     GitHub Repo
                     <svg
@@ -181,6 +188,7 @@
                     class="text-gray-300 flex items-center hover:underline focus:underline"
                     href="https://concurrent-chat-gl.herokuapp.com"
                     target="_blank"
+                    rel="noopener noreferrer"
                   >
                     See Project
                     <svg
@@ -192,6 +200,7 @@
                     class="ml-4 text-gray-300 flex items-center hover:underline focus:underline"
                     href="https://github.com/georgeletsos/concurrent-chat"
                     target="_blank"
+                    rel="noopener noreferrer"
                   >
                     GitHub Repo
                     <svg
