Added a meta description

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>George Letsos</title>
+    <meta
+      name="description"
+      content="Passionate Web Developer, who's
+    interested in the ways things work on the Web and how to efficiently
+    optimize them."
+    />
   </head>
   <body class="bg-gray-900" style="opacity: 0;">
     <header class="px-4 pt-4 max-w-screen-lg mx-auto">
