--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
             </a>
             <a
               class="text-gray-300 hover:text-gray-400 focus:text-gray-400 transition-transform duration-150 transform hover:scale-110 focus:scale-110"
-              href="https://www.linkedin.com/in/george-letsos"
+              href="https://www.linkedin.com/in/george-letsos/"
               target="_blank"
               rel="noopener noreferrer"
             >
@@ -72,7 +72,7 @@
             </a>
             <a
               class="text-gray-300 hover:text-gray-400 focus:text-gray-400 transition-transform duration-150 transform hover:scale-110 focus:scale-110"
-              href="https://github.com/georgeletsos"
+              href="https://github.com/georgeletsos/"
               target="_blank"
               rel="noopener noreferrer"
             >
@@ -144,7 +144,7 @@
               <div class="mt-4 flex text-sm font-semibold tracking-wide">
                 <a
                   class="text-gray-300 flex items-center hover:underline focus:underline"
-                  href="https://lightning-ygo.herokuapp.com"
+                  href="https://lightning-ygo.herokuapp.com/"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
@@ -156,7 +156,7 @@
                 </a>
                 <a
                   class="ml-4 text-gray-300 flex items-center hover:underline focus:underline"
-                  href="https://github.com/georgeletsos/lightning-ygo"
+                  href="https://github.com/georgeletsos/lightning-ygo/"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
@@ -193,7 +193,7 @@
               <div class="mt-4 flex text-sm font-semibold tracking-wide">
                 <a
                   class="text-gray-300 flex items-center hover:underline focus:underline"
-                  href="https://github.com/georgeletsos/lightning-ygo-api"
+                  href="https://github.com/georgeletsos/lightning-ygo-api/"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
@@ -219,13 +219,12 @@
               </h3>
               <p class="mt-4 text-gray-300">
                 Chat application that utilizes concurrency in JavaScript, both
-                on the client and the server side. It's based on Discord — Chat
-                for Communities and Friends.
+                on the client and the server side. It's based on Discord.
               </p>
               <div class="mt-4 flex text-sm font-semibold tracking-wide">
                 <a
                   class="text-gray-300 flex items-center hover:underline focus:underline"
-                  href="https://concurrent-chat-gl.herokuapp.com"
+                  href="https://concurrent-chat-gl.herokuapp.com/"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
@@ -237,7 +236,7 @@
                 </a>
                 <a
                   class="ml-4 text-gray-300 flex items-center hover:underline focus:underline"
-                  href="https://github.com/georgeletsos/concurrent-chat"
+                  href="https://github.com/georgeletsos/concurrent-chat/"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
