Added Jest tool to Lightning Ygo Card Catalog & API as well as TailwindCSS tool to Concurrent Chat

--- a/public/index.html
+++ b/public/index.html
@@ -132,7 +132,8 @@
           <div class="bg-gray-900 shadow-border-red rounded-lg">
             <div class="p-4">
               <div class="text-red-500 text-sm font-semibold tracking-wide">
-                JavaScript &bull; Vue.js &bull; Vuex &bull; Bootstrap
+                JavaScript &bull; Vue.js &bull; Vuex &bull; Bootstrap &bull;
+                Jest
               </div>
               <h3 class="text-gray-300 text-lg font-semibold">
                 Lightning Ygo Card Catalog
@@ -181,7 +182,7 @@
                 class="text-red-500 text-sm font-semibold tracking-wide md:truncate"
               >
                 JavaScript &bull; Node.js &bull; Express.js &bull; MongoDB
-                &bull; Mongoose ODM
+                &bull; Mongoose ODM &bull; Jest
               </div>
               <h3 class="text-gray-300 text-lg font-semibold">
                 Lightning Ygo API
@@ -212,7 +213,7 @@
             <div class="p-4">
               <div class="text-red-500 text-sm font-semibold tracking-wide">
                 JavaScript &bull; Node.js &bull; MongoDB &bull; Mongoose ODM
-                &bull; Socket.IO
+                &bull; Socket.IO &bull; TailwindCSS
               </div>
               <h3 class="text-gray-300 text-lg font-semibold">
                 Concurrent Chat
