Changed projects' description and tools & technologies Also changed some css

--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
           </p>
           <div class="mt-4 text-center md:text-left">
             <a
-              class="py-2 px-4 bg-red-500 hover:bg-red-400 focus:bg-red-500 text-gray-900 font-bold rounded inline-flex items-center tracking-tight focus:outline-none focus:shadow-red-outline"
+              class="py-2 px-4 bg-red-500 hover:bg-red-400 text-gray-900 font-bold rounded inline-flex items-center tracking-tight focus:outline-none focus:shadow-red-outline"
               href="https://docs.google.com/document/d/1Svh81bwzSSocR16i678C775_1NNA0a8vikjDUOHq6WY/edit"
               target="_blank"
               rel="noopener noreferrer"
@@ -123,24 +123,25 @@
       >
         Projects
       </h2>
-      <div class="mt-4 -mx-2 flex flex-col md:flex-row flex-wrap">
+      <div class="-mx-2 flex flex-col md:flex-row flex-wrap">
         <article
-          class="px-2 w-full md:w-1/2"
+          class="px-2 mt-4 w-full"
           role="region"
           aria-label="Lightning Ygo Card Catalog"
         >
           <div class="bg-gray-900 shadow-border-red rounded-lg">
             <div class="p-4">
               <div class="text-red-500 text-sm font-semibold tracking-wide">
-                JavaScript &bull; Vue.js &bull; Vuex &bull; Bootstrap &bull;
-                Jest
+                JavaScript &bull; Vue.js &bull; Vuex &bull; Jest &bull;
+                Bootstrap &bull; Sass
               </div>
               <h3 class="text-gray-300 text-lg font-semibold">
                 Lightning Ygo Card Catalog
               </h3>
               <p class="mt-4 text-gray-300">
-                Yu-Gi-Oh! Duel Links Card Catalog based on the mobile/Steam
-                game.
+                A catalog of cards with advanced filtering means and an improved
+                user-friendly UI, that runs on the Lightning Ygo API. It's based
+                on the mobile/Steam game of Yu-Gi-Oh! Duel Links.
               </p>
               <div class="mt-4 flex text-sm font-semibold tracking-wide">
                 <a
@@ -172,15 +173,13 @@
           </div>
         </article>
         <article
-          class="px-2 w-full md:w-1/2"
+          class="px-2 mt-4 w-full"
           role="region"
           aria-label="Lightning Ygo API"
         >
-          <div class="mt-4 md:mt-0 bg-gray-900 shadow-border-red rounded-lg">
+          <div class="bg-gray-900 shadow-border-red rounded-lg">
             <div class="p-4">
-              <div
-                class="text-red-500 text-sm font-semibold tracking-wide md:truncate"
-              >
+              <div class="text-red-500 text-sm font-semibold tracking-wide">
                 JavaScript &bull; Node.js &bull; Express.js &bull; MongoDB
                 &bull; Mongoose ODM &bull; Jest
               </div>
@@ -188,8 +187,9 @@
                 Lightning Ygo API
               </h3>
               <p class="mt-4 text-gray-300">
-                Yu-Gi-Oh! Duel Links API based on the API provided by
-                YGOPRODECK.
+                Provides quick access, with improved filtering capabilities, to
+                almost all the cards (over 6k) that are available in the
+                mobile/Steam game of Yu-Gi-Oh! Duel Links.
               </p>
               <div class="mt-4 flex text-sm font-semibold tracking-wide">
                 <a
@@ -208,8 +208,12 @@
             </div>
           </div>
         </article>
-        <article class="px-2 w-full" role="region" aria-label="Concurrent Chat">
-          <div class="mt-4 bg-gray-900 shadow-border-red rounded-lg">
+        <article
+          class="px-2 mt-4 w-full"
+          role="region"
+          aria-label="Concurrent Chat"
+        >
+          <div class="bg-gray-900 shadow-border-red rounded-lg">
             <div class="p-4">
               <div class="text-red-500 text-sm font-semibold tracking-wide">
                 JavaScript &bull; Node.js &bull; MongoDB &bull; Mongoose ODM
@@ -219,8 +223,9 @@
                 Concurrent Chat
               </h3>
               <p class="mt-4 text-gray-300">
-                Chat application that utilizes concurrency in JavaScript, both
-                on the client and the server side. It's based on Discord.
+                Community chat application with chat rooms/channels that
+                utilizes concurrency in JavaScript, both on the client and the
+                server side. It's based on Discord.
               </p>
               <div class="mt-4 flex text-sm font-semibold tracking-wide">
                 <a
